--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "scripts": {
-    "dev": "npx ts-node-dev --files src/main.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --files src/main.ts",
     "start": "npx ts-node --files src/main.ts",
     "test": "jest --passWithNoTests"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "prisma": "^4.12.0",
     "ts-jest": "^29.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.12.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0"
   }
 }
