--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
